[gd_scene load_steps=10 format=3 uid="uid://dvvh4sr7r1bqa"]

[ext_resource type="Texture2D" uid="uid://cjwdr0csrq2sh" path="res://assets/main_menu_2.png" id="1_pv42o"]
[ext_resource type="Theme" uid="uid://dexax20p2eewp" path="res://assets/themes/base_theme.tres" id="1_wqfno"]
[ext_resource type="Script" path="res://scripts/gui/main_menu.gd" id="2_ty003"]
[ext_resource type="AudioStream" uid="uid://c4syf8m45hwgj" path="res://assets/audio/intro.ogg" id="4_13kk4"]
[ext_resource type="Texture2D" uid="uid://si4f6pseke5f" path="res://assets/icons/audio_off.png" id="4_whvwy"]
[ext_resource type="Texture2D" uid="uid://c133cxw8sgeco" path="res://assets/icons/audio_off_white.png" id="5_27t4p"]

[sub_resource type="Animation" id="Animation_cunl3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1l6x1"]
resource_name = "fade_out"
length = 0.75
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CenterContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5iury"]
_data = {
"RESET": SubResource("Animation_cunl3"),
"fade_out": SubResource("Animation_1l6x1")
}

[node name="MainMenu" type="Control" node_paths=PackedStringArray("sound_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wqfno")
script = ExtResource("2_ty003")
sound_button = NodePath("CenterContainer/PanelContainer/VBoxContainer/MarginContainer/SoundButton")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pv42o")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 70)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 20

[node name="NewGameButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "New Game"

[node name="TutorialButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Tutorial"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Quit
"

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 70)
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 20

[node name="SoundButton" type="TextureButton" parent="CenterContainer/PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("4_whvwy")
texture_pressed = ExtResource("4_whvwy")
texture_hover = ExtResource("5_27t4p")
ignore_texture_size = true
stretch_mode = 5

[node name="MarginContainer5" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 276.0
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer5"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer5/CenterContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer5/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer5/CenterContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Izual
"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer5/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer5/CenterContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "MordredViking"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer5/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer5/CenterContainer/VBoxContainer/MarginContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Tinngles"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer5/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer5/CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "TinTuna"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_13kk4")
parameters/looping = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5iury")
}

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/TutorialButton" to="." method="_on_tutorial_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="toggled" from="CenterContainer/PanelContainer/VBoxContainer/MarginContainer/SoundButton" to="." method="_on_sound_button_toggled"]
